[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/sprites/tile_0084.png" type="Texture" id=1]
[ext_resource path="res://scripts/player.gd" type="Script" id=2]
[ext_resource path="res://assets/effects/progressBar.png" type="Texture" id=3]
[ext_resource path="res://assets/effects/progressBarFiller.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 7.0
height = 0.0

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -2 )
texture = ExtResource( 1 )

[node name="playerCollision" type="CollisionShape2D" parent="."]
position = Vector2( 0, -1 )
shape = SubResource( 1 )

[node name="step1" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="step2" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
autostart = true

[node name="step3" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="TurnProgressBar" type="TextureProgress" parent="."]
margin_left = -8.0
margin_top = -13.0
margin_right = 32.0
margin_bottom = 27.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 4 )

[connection signal="timeout" from="step1" to="." method="_on_step1_timeout"]
[connection signal="timeout" from="step2" to="." method="_on_step2_timeout"]
[connection signal="timeout" from="step3" to="." method="_on_step3_timeout"]
